--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="/form" method="POST">
-        <input type="email" name="email" id="email" placeholder="email"><br>
+        <input type="email" name="email" id="email" placeholder="email" required><br>
         <input type="text" name="nome" id="nome" placeholder="nome"><br>
         <input type="number" name="pontos" id="pontos" placeholder="pontos">
         <button type="submit">Enviar</button>
