--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,10 @@
 </head>
 <body>
     <form action="/form" method="POST">
-        <input type="email" name="email" id="email" placeholder="email" required><br>
+        <input type="email" name="email" id="email" placeholder="email" value="<%= email %>" required><br>
         <input type="text" name="nome" id="nome" placeholder="nome"><br>
         <input type="number" name="pontos" id="pontos" placeholder="pontos">
+        <%= errors %>
         <button type="submit">Enviar</button>
     </form>
 </body>
